--- a/src/net/avensome/dev/gnupolpot/main.fxml
+++ b/src/net/avensome/dev/gnupolpot/main.fxml
@@ -1,28 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import net.avensome.dev.gnupolpot.*?>
+<?import net.avensome.dev.gnupolpot.Plotter?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="400.0"
-            prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.40">
-    <top>
-        <HBox alignment="CENTER_LEFT" spacing="4.0" BorderPane.alignment="CENTER">
-            <padding>
-                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
-            </padding>
-            <children>
-                <Label text="X:"/>
-                <TextField prefWidth="80.0"/>
-                <Label text="Y:"/>
-                <TextField prefWidth="80.0"/>
-                <Label text="Color:"/>
-                <ColorPicker prefWidth="120.0"/>
-            </children>
-        </HBox>
-    </top>
+            prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="net.avensome.dev.gnupolpot.MainController">
     <center>
-        <Plotter/>
+        <Plotter fx:id="plotter"/>
     </center>
+    <bottom>
+        <ToolBar BorderPane.alignment="CENTER">
+            <items>
+                <Button mnemonicParsing="false" onAction="#resetPlotClicked" text="Reset plot"/>
+            </items>
+        </ToolBar>
+    </bottom>
 </BorderPane>
