--- a/src/net/avensome/dev/gnupolpot/main.fxml
+++ b/src/net/avensome/dev/gnupolpot/main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 <?import net.avensome.dev.gnupolpot.plotter.Plotter?>
@@ -14,6 +15,8 @@
         <ToolBar BorderPane.alignment="CENTER">
             <items>
                 <Button mnemonicParsing="false" onAction="#resetPlotClicked" text="Reset plot"/>
+                <Button mnemonicParsing="false" onAction="#importPointsClicked" text="Import points"/>
+                <Label fx:id="statusLabel" textAlignment="RIGHT"/>
             </items>
         </ToolBar>
     </bottom>
