--- a/src/net/avensome/dev/gnupolpot/main.fxml
+++ b/src/net/avensome/dev/gnupolpot/main.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
-<?import net.avensome.dev.gnupolpot.plotter.Plotter?>
+<?import net.avensome.dev.gnupolpot.plotter.*?>
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="400.0"
             prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="net.avensome.dev.gnupolpot.MainController">
@@ -16,7 +15,8 @@
             <items>
                 <Button mnemonicParsing="false" onAction="#resetPlotClicked" text="Reset plot"/>
                 <Button mnemonicParsing="false" onAction="#importPointsClicked" text="Import points"/>
-                <Label fx:id="statusLabel" textAlignment="RIGHT"/>
+                <Button mnemonicParsing="false" onAction="#snapshotClicked" text="Snapshot"/>
+                <Label fx:id="statusLabel"/>
             </items>
         </ToolBar>
     </bottom>
