Plot summary dialog

--- a/src/net/avensome/dev/gnupolpot/main.fxml
+++ b/src/net/avensome/dev/gnupolpot/main.fxml
@@ -18,6 +18,8 @@
                 <Separator orientation="VERTICAL"/>
                 <Button mnemonicParsing="false" onAction="#zoomAllClicked" text="Zoom all"/>
                 <Button mnemonicParsing="false" onAction="#snapshotClicked" text="Snapshot"/>
+                <Separator orientation="VERTICAL"/>
+                <Button mnemonicParsing="false" onAction="#summaryClicked" text="Summary"/>
                 <Label fx:id="statusLabel"/>
             </items>
         </ToolBar>
