--- a/src/net/avensome/dev/gnupolpot/main.fxml
+++ b/src/net/avensome/dev/gnupolpot/main.fxml
@@ -13,7 +13,7 @@
         <ToolBar BorderPane.alignment="CENTER">
             <items>
                 <Button mnemonicParsing="false" onAction="#resetPlotClicked" text="Reset plot"/>
-                <Button mnemonicParsing="false" onAction="#importPointsClicked" text="Import points"/>
+                <Button mnemonicParsing="false" onAction="#importPointsClicked" text="Import plot"/>
                 <Button fx:id="importAgainButton" disable="true" mnemonicParsing="false" onAction="#importAgainClicked" text="Import again"/>
                 <Separator orientation="VERTICAL"/>
                 <Button mnemonicParsing="false" onAction="#zoomAllClicked" text="Zoom all"/>
