--- a/src/net/avensome/dev/gnupolpot/main.fxml
+++ b/src/net/avensome/dev/gnupolpot/main.fxml
@@ -1,30 +1,129 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.BorderPane?>
 <?import net.avensome.dev.gnupolpot.plotter.*?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="400.0"
-            prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="net.avensome.dev.gnupolpot.MainController">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.avensome.dev.gnupolpot.MainController">
     <center>
-        <Plotter fx:id="plotter"/>
+        <Plotter fx:id="plotter" />
     </center>
     <bottom>
         <ToolBar BorderPane.alignment="CENTER">
             <items>
-                <Button mnemonicParsing="false" onAction="#resetPlotClicked" text="Reset plot"/>
-                <Button mnemonicParsing="false" onAction="#importPointsClicked" text="Import plot"/>
-                <Button fx:id="importAgainButton" disable="true" mnemonicParsing="false" onAction="#importAgainClicked" text="Import again"/>
-                <Separator orientation="VERTICAL"/>
-                <Button mnemonicParsing="false" onAction="#zoomAllClicked" text="Zoom all"/>
-                <Button mnemonicParsing="false" onAction="#zoomOneToOneClicked" text="Zoom 1:1"/>
-                <Button mnemonicParsing="false" onAction="#centerClicked" text="Center"/>
-                <Separator orientation="VERTICAL"/>
-                <Button mnemonicParsing="false" onAction="#snapshotClicked" text="Snapshot"/>
-                <Button mnemonicParsing="false" onAction="#renderClicked" text="Render file(s)"/>
-                <Separator orientation="VERTICAL"/>
-                <Button mnemonicParsing="false" onAction="#summaryClicked" text="Summary"/>
-                <Label fx:id="statusLabel"/>
+                <Button mnemonicParsing="false" onAction="#resetPlotClicked">
+                    <graphic>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image>
+                                <Image url="@icons/edit-delete.svg.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+               <tooltip>
+                  <Tooltip />
+               </tooltip>
+                </Button>
+                <Button mnemonicParsing="false" onAction="#importPointsClicked">
+                    <graphic>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image>
+                                <Image url="@icons/default-document-open.svg.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+               <tooltip>
+                  <Tooltip />
+               </tooltip>
+                </Button>
+                <Button fx:id="importAgainButton" disable="true" mnemonicParsing="false" onAction="#importAgainClicked">
+                    <graphic>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image>
+                                <Image url="@icons/system-reboot.svg.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+               <tooltip>
+                  <Tooltip />
+               </tooltip>
+                </Button>
+                <Separator orientation="VERTICAL" />
+                <Button mnemonicParsing="false" onAction="#zoomAllClicked">
+                    <graphic>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image>
+                                <Image url="@icons/transform-scale.svg.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+               <tooltip>
+                  <Tooltip />
+               </tooltip>
+                </Button>
+                <Button mnemonicParsing="false" onAction="#zoomOneToOneClicked">
+                    <graphic>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image>
+                                <Image url="@icons/zoom-original.svg.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+               <tooltip>
+                  <Tooltip />
+               </tooltip>
+                </Button>
+                <Button mnemonicParsing="false" onAction="#centerClicked">
+                    <graphic>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image>
+                                <Image url="@icons/zoom-fit-best.svg.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+               <tooltip>
+                  <Tooltip />
+               </tooltip>
+                </Button>
+                <Separator orientation="VERTICAL" />
+                <Button mnemonicParsing="false" onAction="#snapshotClicked">
+                    <graphic>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image>
+                                <Image url="@icons/document-save.svg.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+               <tooltip>
+                  <Tooltip />
+               </tooltip>
+                </Button>
+                <Button mnemonicParsing="false" onAction="#renderClicked">
+                    <graphic>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image>
+                                <Image url="@icons/document-save-as.svg.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+               <tooltip>
+                  <Tooltip />
+               </tooltip>
+                </Button>
+                <Separator orientation="VERTICAL" />
+                <Button fx:id="summaryButton" mnemonicParsing="false" onAction="#summaryClicked">
+                    <graphic>
+                        <ImageView fitHeight="24" fitWidth="24">
+                            <image>
+                                <Image url="@icons/document-properties.svg.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+               <tooltip>
+                  <Tooltip />
+               </tooltip>
+                </Button>
+                <Label fx:id="statusLabel" />
             </items>
         </ToolBar>
     </bottom>
