--- a/core/src/net/avensome/dev/gnupolpot/core/main.fxml
+++ b/core/src/net/avensome/dev/gnupolpot/core/main.fxml
@@ -26,7 +26,7 @@
                             <graphic>
                                 <ImageView>
                                     <image>
-                                        <Image url="@icons/list-add.png"/>
+                                        <Image url="@icons/actions/list-add.png"/>
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -38,7 +38,7 @@
                             <graphic>
                                 <ImageView>
                                     <image>
-                                        <Image url="@icons/document-open.png"/>
+                                        <Image url="@icons/actions/document-open.png"/>
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -51,7 +51,7 @@
                             <graphic>
                                 <ImageView>
                                     <image>
-                                        <Image url="@icons/view-refresh.png"/>
+                                        <Image url="@icons/actions/view-refresh.png"/>
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -63,7 +63,7 @@
                             <graphic>
                                 <ImageView>
                                     <image>
-                                        <Image url="@icons/ac-adapter.png"/>
+                                        <Image url="@icons/actions/ac-adapter.png"/>
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -76,7 +76,7 @@
                             <graphic>
                                 <ImageView>
                                     <image>
-                                        <Image url="@icons/edit-delete.png"/>
+                                        <Image url="@icons/actions/edit-delete.png"/>
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -96,7 +96,7 @@
                             <graphic>
                                 <ImageView>
                                     <image>
-                                        <Image url="@icons/camera-photo.png"/>
+                                        <Image url="@icons/actions/camera-photo.png"/>
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -108,7 +108,7 @@
                             <graphic>
                                 <ImageView>
                                     <image>
-                                        <Image url="@icons/applets-screenshooter.png"/>
+                                        <Image url="@icons/actions/applets-screenshooter.png"/>
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -128,7 +128,7 @@
                             <graphic>
                                 <ImageView>
                                     <image>
-                                        <Image url="@icons/view-fullscreen.png"/>
+                                        <Image url="@icons/actions/view-fullscreen.png"/>
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -140,7 +140,7 @@
                             <graphic>
                                 <ImageView>
                                     <image>
-                                        <Image url="@icons/zoom-original.png"/>
+                                        <Image url="@icons/actions/zoom-original.png"/>
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -152,7 +152,7 @@
                             <graphic>
                                 <ImageView>
                                     <image>
-                                        <Image url="@icons/zoom-fit-best.png"/>
+                                        <Image url="@icons/actions/zoom-fit-best.png"/>
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -172,7 +172,7 @@
                             <graphic>
                                 <ImageView>
                                     <image>
-                                        <Image url="@icons/document-page-setup.png"/>
+                                        <Image url="@icons/actions/document-page-setup.png"/>
                                     </image>
                                 </ImageView>
                             </graphic>
@@ -185,4 +185,14 @@
             </children>
         </VBox>
     </bottom>
+    <left>
+        <ScrollPane>
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            </padding>
+            <content>
+                <VBox fx:id="toolPane"/>
+            </content>
+        </ScrollPane>
+    </left>
 </BorderPane>
