--- a/core/src/net/avensome/dev/gnupolpot/core/main.fxml
+++ b/core/src/net/avensome/dev/gnupolpot/core/main.fxml
@@ -22,18 +22,6 @@
                 </ToolBar>
                 <ToolBar>
                     <items>
-                        <Button mnemonicParsing="false" onAction="#addPointClicked">
-                            <graphic>
-                                <ImageView>
-                                    <image>
-                                        <Image url="@icons/actions/list-add.png"/>
-                                    </image>
-                                </ImageView>
-                            </graphic>
-                            <tooltip>
-                                <Tooltip text="Import"/>
-                            </tooltip>
-                        </Button>
                         <Button mnemonicParsing="false" onAction="#importPointsClicked">
                             <graphic>
                                 <ImageView>
@@ -57,6 +45,43 @@
                             </graphic>
                             <tooltip>
                                 <Tooltip text="Import last file again"/>
+                            </tooltip>
+                        </Button>
+                        <Button fx:id="saveButton" disable="true" mnemonicParsing="false" onAction="#saveClicked">
+                            <graphic>
+                                <ImageView>
+                                    <image>
+                                        <Image url="@icons/actions/document-save.png"/>
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <tooltip>
+                                <Tooltip text="Save plot"/>
+                            </tooltip>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#saveAsClicked">
+                            <graphic>
+                                <ImageView>
+                                    <image>
+                                        <Image url="@icons/actions/document-save-as.png"/>
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <tooltip>
+                                <Tooltip text="Save as..."/>
+                            </tooltip>
+                        </Button>
+                        <Separator orientation="VERTICAL"/>
+                        <Button mnemonicParsing="false" onAction="#addPointClicked">
+                            <graphic>
+                                <ImageView>
+                                    <image>
+                                        <Image url="@icons/actions/list-add.png"/>
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <tooltip>
+                                <Tooltip text="Import"/>
                             </tooltip>
                         </Button>
                         <MenuButton fx:id="featureButton" disable="true" mnemonicParsing="false">
