--- a/core/src/net/avensome/dev/gnupolpot/core/main.fxml
+++ b/core/src/net/avensome/dev/gnupolpot/core/main.fxml
@@ -216,7 +216,7 @@
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
             <content>
-                <VBox fx:id="toolPane"/>
+                <VBox fx:id="toolPane" spacing="5"/>
             </content>
         </ScrollPane>
     </left>
